--- a/index.html
+++ b/index.html
@@ -33,56 +33,56 @@
 		<img src="image/thirdimage.PNG"  width="40%">
 	</section>
 	<section class="sec3">
-		<h1> Recharge & Pay Bills on Paytm.</h1>
+		<h1 class="bills"> Recharge & Pay Bills on Paytm.</h1>
 		<div class="paybills">
 			<a href="">
-				<img src="image/icon1.PNG" width="50%">
+				<img src="image/icon1.PNG" width="40%">
 				<p>Recharge </br> Prepaid </br> mobile > </p></a>
 			<a href="">
-				<img src="image/icon2.PNG" width="50%">
+				<img src="image/icon2.PNG" width="40%">
                 <p>Pay </br> Rent </br> payment > </p></a>	
 			<a href="">
-				<img src="image/icon3.PNG" width="50%">
+				<img src="image/icon3.PNG" width="40%">
                 <p>Pay </br> Electricty </br>Bill > </p></a>
 			<a href="">
-				<img src="image/icon4.PNG" width="50%">
+				<img src="image/icon4.PNG" width="38%">
 				<p>Recharge </br> DTH </br> Connection > </p></a>
 			<a href="">
-				<img src="image/icon5.PNG" width="50%">
+				<img src="image/icon5.PNG" width="40%">
 				<p>Book </br> Gas </br> Cylinder > </p></a>
 			<a href="">
-				<img src="image/icon6.PNG" width="50%">
+				<img src="image/icon6.PNG" width="40%">
 				<p>Pay </br>Credit </br> Bill > </p></a>
-			<a href="">
-				<img src="image/icon7.PNG" width="40%">
-				<p>All </br> Payment </br> Services > </p>
-			</a>	
+			<!-- <a href="">
+				<img src="image/icon7.PNG" width="32%">
+				<p class="id">All </br> Payment </br> Services > </p>
+			</a>	 -->
 	   	</div>
 		</section>
 	<section class="sec4">
-		<h1>Book & Buy on Paytm.</h1></br>
-		<div class="books">
+		<h1 class="buy">Book & Buy on Paytm.</h1></br>
+		<div class="paybills">
 		   <a href="">
-			   	<img src="image/icon8.PNG" width="50%">
+			   	<img src="image/icon8.PNG" width="38%">
 			    <p>Movie </br> Tickets > </p ></a>
 			<a href="">
-				<img src="image/icon9.PNG" width="50%">
+				<img src="image/icon9.PNG" width="38%">
 			    <p>Flight </br>  Tickets > </p ></a>
 			<a href="">
-				<img src="image/icon10.PNG" width="50%">
+				<img src="image/icon10.PNG" width="38%">
 				<p>Bus </br>  Tickets > </p></a>
 			<a href="">
-				<img src="image/icon11.PNG" width="50%">
+				<img src="image/icon11.PNG" width="38%">
 			    <p>Train </br>  Tickets > </p></a>
 			<a href="">
-				<img src="image/icon12.PNG" width="50%">
+				<img src="image/icon12.PNG" width="38%">
 				<p>Buy </br>  Insurance > </p></a>					
 			<a href="">
-				<img src="image/icon13.PNG" width="50%">
+				<img src="image/icon13.PNG" width="38%">
 				<p>Inertantional </br> Flights > </p></a>
-			<a href="">
-				<img src="image/icon14.PNG" width="70%">	
-				<p>Invest </br> InStores></p></a>
+			<!-- <a href="">
+				<img src="image/icon14.PNG" width="38%">	
+				<p class="id">Invest </br> InStores></p></a> -->
 		</div>
 	</section>
 	<section class="sec5">
@@ -90,7 +90,7 @@
 		<div class="sec5div1">
 		    <div>
 		<div class="image">
-			<img src="image/fifthimage.PNG" width="10%">
+			<img clas="iamge5" src="image/fifthimage.PNG" width="10%">
 			<p>Paytm </br> Wallet</p>
 		</div>
 			<h1 class="online">The Fastest Way to </br>  Pay In-store & Online.</h1>
@@ -101,7 +101,7 @@
 				<i class="fa-brands fa-google-play"></i>
 			</span></a>
 		</div>
-		<img src="image/fourthimage.PNG" width="40%">
+		<img class="image4" src="image/fourthimage.PNG" width="40%">
 	</section>
 	<section class="sec6">
 		<div class="sec6div2">
@@ -118,7 +118,7 @@
 				<i class="fa-brands fa-google-play"></i>
 			</span></a>
 		</div>
-		<img src="image/sixthimage.PNG" width="50%">
+		<img class="image6" src="image/sixthimage.PNG" width="50%">
 	</section>  
 	<section class="sec7">
 		<div class="sec7div">
@@ -136,30 +136,17 @@
 		<div class="sec8div1">
 			<img class="image10" src="image/tenimage.PNG" width="40%">
 			<h1 class="unlimted">Unlimited Cashback </br>  Every time.</h1>
-			<p >Paytm HDFC Bank Select Credit Card. A card </br> with assured Cashback and incredible offers.</p>
+			<p class="hdfc">Paytm HDFC Bank Select Credit Card. A card </br> with assured Cashback and incredible offers.</p>
 			<img src="image/elevenimage.PNG" width="80%">
 		</div>
 		<div class="sec8div2">
 			<img class="image12" src="image/twelveimage.PNG" width="38%">
 			<h1 class="most">India’s Most </br>  Sincere Credit Card</h1>
-			<p>Paytm SBI Card SELECT - With Intelligent </br>  Features & Great Rewards that Never Expire</p>
+			<p class="sbi">Paytm SBI Card SELECT - With Intelligent </br>  Features & Great Rewards that Never Expire</p>
 			<img src="image/13image.PNG" width="80%">
 		</div>
 	</section>
-	<section class="sec8">
-		<div class="sec8div1">
-			<img class="image10" src="image/tenimage.PNG" width="30%">
-			<h1 class="unlimted">Unlimited Cashback </br>  Every time.</h1>
-			<p >Paytm HDFC Bank Select Credit Card. A card </br> with assured Cashback and incredible offers.</p>
-			<img src="image/elevenimage.PNG" width="80%">
-		</div>
-		<div class="sec8div2">
-			<img class="image12" src="image/twelveimage.PNG" width="30%">
-			<h1 class="most">India’s Most </br>  Sincere Credit Card</h1>
-			<p>Paytm SBI Card SELECT - With Intelligent </br>  Features & Great Rewards that Never Expire</p>
-			<img src="image/13image.PNG" width="80%">
-		</div>
-	</section>
+	
 	<section class="sec9">
 		<div>
 			<h1 class="service">Financial Services by Paytm</h1>
@@ -171,13 +158,12 @@
 		<img class="image15" src="image/15image.PNG" width="40%">
 	</section>
 	<section class="sec10">
-		<div class="sec10div">
-			<img src="image/17image.PNg" width="50%">
-		</div>
-		<div class="sec10div2">
+		<img class="image17" src="image/17image.PNg" width="40%">
+		<div>
 			<img class="image16" src="image/16image.PNG" width="40%">
 			<h1 class="build">Build Long-term </br> Wealth & Achieve </br>  your Goals.</h1>
 			<p class="money">Investing on Paytm Money is transparent, low-cost and </br>  commission-free. Buy stocks & mutual funds that can </br>  help you create wealth & realise your dreams.  </p>
+			<button class="learn">Learn More > </button>
 		</div>
 	</section>
 	<section class="sec11">
@@ -190,26 +176,21 @@
 			<img src="image/19image.PNG" width="40%">
 	</section>
 	<section class="sec12">
+			<img src="image/20image.PNG" width="35%">
 		<div>
-			<img src="image/20image.PNG" width="50%">
-		</div>
-		<div>
-			<img src="image/21image.PNG" width="50%">
+			<img src="image/21image.PNG" width="30%">
 			<h1 class="get">Get a Personal Loan in </br>  2 Minutes.</h1>
-			<p>Paytm offers India's quickest multi-purpose, hassle-free loan. It </br> is 100% digital, transparent and paperless.</p>
+			<p class="offer">Paytm offers India's quickest multi-purpose, hassle-free loan. It </br> is 100% digital, transparent and paperless.</p>
 			<button class="learnmore">Learn More > </button>
 		</div>
 	</section>
-	<section class="sec12">
-		<h1>Business Services by Paytm</h1>
-		<div class="accept">
-		<h1>Accept payments </br> online with ease</h1>
-		<p>Grow your business with the payment gateway that </br>powers India’s largest brands and even the Paytm App</p>
-		<button class="learnmore">Learn More > </button>
-		</div>
-		<div>	
-		<img src="image/20image.PNG" width="50%">
-		</div>
-	</section>
+	<!-- <section class="sec13">
+			<h1 class="business">Business Services by Paytm</h1>
+			<div class="sec13div">
+			<h1>Accept payments </br>  online with ease</h1>
+			<p>Grow your business with the payment gateway that powers India’s largest brands and even the Paytm App</p>
+			<img src="image/22image.PNG">	
+			</div>
+	</section> -->
 </body>
 </html>
